# agentevaluator

./: .gitignore  .mcp.json  .secrets.baseline  README.md  pyproject.toml
.claude/skills/evaluate-agent/: SKILL.md
.claude/skills/evaluate-agent/scripts/: discover_manifests.py  fetch_observability.py  open_agent.py  plan_swarm.py  render_report.py  score_agent.py  score_case.py  validate_manifest.py  validate_narrative.py
.claude/skills/evaluate-agent/tests/: conftest.py  test_artifact_layout.py  test_auth.py  test_auto_dom_snapshot.py  test_auto_screenshot.py  test_capture.py  test_capture_labels.py  test_case_narrative.py  test_common_phase_metrics_and_logging.py  test_discovery.py  test_dom_snapshot.py  test_interact.py  test_loader.py  test_manifest_loader_and_discovery.py  test_manifest_schema.py  test_manifest_security.py  test_observability_fetcher.py  test_observability_fetchers.py  test_orchestration.py  test_page_error_dom_snapshot.py  test_page_error_screenshot.py  test_plan_swarm.py  test_report.py  test_report_citation_validator.py  test_report_errors.py  test_report_render_agent_score.py  test_report_render_case_score.py  test_report_render_report_cli.py  test_schema.py  test_scoring_agent_score.py  test_scoring_baseline_trace_resolver.py  test_scoring_baseline_trace_schema.py  (+24 more)
.claude/skills/onboard-evaluate-agent/: SKILL.md
.github/scripts/: run_linters.py  run_tests.py
.github/workflows/: ci.yml  secrets-audit.yml
config/: linter.yaml  tests.yaml
runs/people-directory-demo/20260502T122456Z/: plan.json  report.md  score.json
(+215 files in other folders)
